chore: add dependency